static/css/custom.css
/* MISC
============================================================================= */

.quire-contributors-list.bio #Timothy-Potts {
  display: none;
}

.quire-contributor a {
  color: #333;
}
.quire-contributor a:hover {
  color: #7a3227;
}
@media print {
  .quire-contributor a {
    color: #000;
  }
}

.quire-splash .quire-page__header .hero-body .quire-page__header__title {
  color: #b44a3a;
}

.quire-page h2 {
  text-transform: none;
}
@@media print {
  .quire-page h2 {
    print: #363636;
  }
}

.quire-page__content .content .footnote-ref a {
  font-weight: normal;
  margin-right: .2em;
}

.content figure .quire-figure__caption {
  min-height: 1rem;
}

.quire-splash p:first-child:first-letter {
  margin-right: .5rem; 
}

@media print {
  .title-page .title-tp {
    max-width: 3.75in;
    float: right;
  }
  .title-page .sub-title {
    clear: both;
  }
}


/* COVER
============================================================================= */

/* Custom cover slideshow animation */
.quire-cover__overlay {
  height: calc((95vh - 3rem) * .5);
  min-height: calc((95vh - 3rem) * .5);
  width: 50vw;
}
.quire-cover__overlay img {
  max-height: 100%;
  width: 100%;
  object-fit: cover;
  position:absolute;
  left:0;
  transition: opacity 1s ease-in-out;
  animation-name: FadeInOut;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-duration: 16s;
}
.quire-cover__overlay img {
  object-fit: none;
}
.quire-cover__overlay.upper-left img {
  object-position: bottom right;
}
.quire-cover__overlay.upper-right {
  left: 50%;
}
.quire-cover__overlay.upper-right img {
  object-position: bottom left;
}
.quire-cover__overlay.lower-left {
  top: 50%;
}
.quire-cover__overlay.lower-left img {
  object-position: top right;
}
.quire-cover__overlay.lower-right {
  left: 50%;
  top: 50%;
}
.quire-cover__overlay.lower-right img {
  object-position: top left;
}
@keyframes FadeInOut {
  0% {
    opacity:1;
  }
  17% {
    opacity:1;
  }
  25% {
    opacity:0;
  }
  92% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}
.quire-cover__overlay.upper-left img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.upper-left img:nth-of-type(2) {
  animation-delay: 8s;
}
.quire-cover__overlay.upper-left img:nth-of-type(3) {
  animation-delay: 6s;
}
.quire-cover__overlay.upper-left img:nth-of-type(4) {
  animation-delay: 4s;
}
.quire-cover__overlay.upper-left img:nth-of-type(5) {
  animation-delay: 2s;
}
.quire-cover__overlay.upper-left img:nth-of-type(6) {
  animation-delay: 0;
}

.quire-cover__overlay.upper-right img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.upper-right img:nth-of-type(2) {
  animation-delay: 10s;
}
.quire-cover__overlay.upper-right img:nth-of-type(3) {
  animation-delay: 8s;
}
.quire-cover__overlay.upper-right img:nth-of-type(4) {
  animation-delay: 6s;
}
.quire-cover__overlay.upper-right img:nth-of-type(5) {
  animation-delay: 4s;
}
.quire-cover__overlay.upper-right img:nth-of-type(6) {
  animation-delay: 2s;
}

.quire-cover__overlay.lower-right img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.lower-right img:nth-of-type(2) {
  animation-delay: 12s;
}
.quire-cover__overlay.lower-right img:nth-of-type(3) {
  animation-delay: 10s;
}
.quire-cover__overlay.lower-right img:nth-of-type(4) {
  animation-delay: 8s;
}
.quire-cover__overlay.lower-right img:nth-of-type(5) {
  animation-delay: 6s;
}
.quire-cover__overlay.lower-right img:nth-of-type(6) {
  animation-delay: 4s;
}

.quire-cover__overlay.lower-left img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.lower-left img:nth-of-type(2) {
  animation-delay: 14s;
}
.quire-cover__overlay.lower-left img:nth-of-type(3) {
  animation-delay: 12s;
}
.quire-cover__overlay.lower-left img:nth-of-type(4) {
  animation-delay: 10s;
}
.quire-cover__overlay.lower-left img:nth-of-type(5) {
  animation-delay: 8s;
}
.quire-cover__overlay.lower-left img:nth-of-type(6) {
  animation-delay: 6s;
}
.hero-body .container.is-fluid {
  background-color: #b44a3a;
}
.quire-cover__hero .title,
.quire-cover__hero .contributor {
  font-family: "Noto Sans", sans-serif;
  font-weight: normal;
  letter-spacing: 0;
}
.quire-cover__hero .contributor {
  margin-top: 1.5rem;
}

/* add contributors to cover content area for mobile devices only */
.mobile-contributor {
  display: none;
  text-align: center;
  margin-bottom: 1rem;
  font-weight: bold;
}

/* Soften black on down arrow circle */
.quire-cover__more .hero-more {
  background: #333;
}

@media screen and (max-width: 689px){
  .quire-cover__hero {
    overflow: hidden;
  }
  .quire-cover__overlay {
    width: 100%;
    /* make the top images 40% height */
    height: calc((95vh - 3rem) * .4);
    min-height: calc((95vh - 3rem) * .4);
  }
  .quire-cover__overlay img {
    /* show more of the image */
    object-fit: cover;
  }
  .quire-cover__overlay.upper-left,
  .quire-cover__overlay.lower-left {
    left: -50vw;
  }
  .quire-cover__overlay.upper-right,
  .quire-cover__overlay.lower-right {
    margin-right: -50%;
  }
  .quire-cover__overlay.lower-left,
  .quire-cover__overlay.lower-right {
    top: 40%;
    /* make the bottom images 60% height */
    height: calc((95vh - 3rem) * .6);
    min-height: calc((95vh - 3rem) * .6);
  }
  /* aadjust spacing and display on title/subtitle block */
  .hero-body .container.is-fluid {
    bottom: 0%;
    margin: 0;
    padding-bottom: 40px;
    text-align: center;
  }
  .quire-cover__hero .title {
    margin: 0;
  }
  .quire-cover__hero .subtitle {
    line-height: 1.35;
  }
  /* hide contributor in title block */
  .quire-cover__hero .contributor {
    display: none;
  }
  /* display contributor in content area */
  .mobile-contributor {
    display: block;
  }
}
/* ... */

